    * LDAP: Using asynchronous searches / added optional support for paginated
      searches (Can be enabled in connection settings)
    * Added option to enable browser scrollbar to the multisite sidebar (only
      via "sidebar_show_scrollbar = True" in multisite.mk 
    * Added option to disable automatic userdb synchronizations in multisite
    * Implemented search forms for most data tables
    * New status icons: export as CSV, export as JSON

    WATO:
    * Allow to configure check-/retry_interval in second precision
    * vSphere secret is not shown to the user via WATO anymore
    * FIX: do validation of check items in rule editor
    * New rules for jolokia check (JVM): uptime, threads, sessions,
                                         requests, queue

    Notifications:
    * Flexible Notification can now filter service levels
    * FIX: check_tcp corrected order of parameters in definition

    Event Console:
    * New global setting "force message archiving", converts the EC into
      a kind of syslog archive
    * FIX: fix layout of filter for history action type
    * FIX: better detect non-IP-number hosts in hostname translation

1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins
    * New variable host_check_commands, that allows the definition of
      an alternative host check command (without manually defining one)
    * New variable snmp_check_interval which can be used to customize
      the check intervals of SNMP based checks
    * setup: Added missing vars rrd_path and rrdcached_sock
    * new variable check_mk_exit_status: allows to make Check_MK service OK,
      even if host in not reachable.
    * set always_cleanup_autochecks to True per default now
    * check_mk: new option --snmptranslate

    Multisite:
    * New availability view for arbitrary host/service collections
    * New option auth_by_http_header to use the value of a HTTP header