@@ -76,14 +76,15 @@
       via "sidebar_show_scrollbar = True" in multisite.mk 
     * Added option to disable automatic userdb synchronizations in multisite
     * Implemented search forms for most data tables
-    * New status icons: export as CSV, export as JSON
+    * New icons in view footers: export as CSV, export as JSON
 
     WATO:
     * Allow to configure check-/retry_interval in second precision
     * vSphere secret is not shown to the user via WATO anymore
-    * FIX: do validation of check items in rule editor
     * New rules for jolokia check (JVM): uptime, threads, sessions,
                                          requests, queue
+    * Custom user attributes can now be managed using WATO
+    * FIX: do validation of check items in rule editor
 
     Notifications:
     * Flexible Notification can now filter service levels
